@@ -1,4 +1,4 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/gcc-4.7.1.ebuild,v 1.8 2012/11/24 21:22:30 vapier Exp $
 
@@ -145,7 +145,7 @@ src_compile() {
 	# so force it to use $BASH (that portage uses) - it can't be EPREFIX
 	# in case that doesn't exist yet
 	export CONFIG_SHELL="${CONFIG_SHELL:-${BASH}}"
-	gcc_src_compile
+	toolchain_src_compile
 }
 
 src_install() {
